Updated student organization funding procedures

--- a/organizations.tex
+++ b/organizations.tex
@@ -110,34 +110,34 @@ There shall be no limit to the number of groups allowed to have ex-officio seats
 \subsection{}
 Student organization ex-officio members shall have all the rights of a regular assembly member, except they may not make motions, second a motion, or vote.
 
+
+\begin{framed}
+\textbf{Notes on new student organization funding process}
+\begin{enumerate}
+\item SOFC
+\item Chair
+\item Vice Chair
+\item Pool of funding people
+\item Self-organize each cycle 
+\item Disjoint reviews and appeals board each cycle
+\end{enumerate}
+\end{framed}
+
+
 \section{Student Organization Funding.}
-Student Organization Funding during the academic year will be determined by the Student Organization Funding Commission (SOFC).
-\todo[inline]{Fix the rest of this section.}
+Student organization funding during the academic year will be determined by the Student Organization Funding Commission (SOFC).  The SOFC shall consider funding requests for all student organizations and their events under the guidelines established below.
 
-\subsection{}
-BPC shall consider funding requests for all student organizations and their events under the guidelines established below.
+\subsection{Leadership.}
+The President shall, with the advice and consent of the Assembly, appoint a Chair of the SOFC.  The Chair is a non-voting member.
 
-\subsection{Membership Structure}
-\subsubsection{}
-BPC shall consist of a Chair, Vice-Chair, Reviews, and Appeals Board.
-\subsubsection{Voting Membership}
-\subsubsubsection{}
-BPC shall be composed of a Reviews Board and an Appeals Board.
-\subsubsubsubsection{}
-Each Board must have at least four but no more than nine voting members.
-\subsubsubsubsubsection{}
-The Chair is non-voting member.
-\subsubsubsubsubsection{}
-The Vice-chair is a voting member.
-\subsubsubsubsection{}
-Each Board must maintain a majority of voting MSA Representatives.
-\subsubsubsection{}
-The Reviews Board and Appeals Board shall be recommended by the BPC Chair and shall be confirmed upon a motion, second and a two-thirds majority vote of the Steering Committee (SC) of MSA.
-\subsubsubsection{Removal of Voting Members}
-\subsubsubsubsection{}
-Any voting member from either Board may be removed upon a motion, second, and two-thirds majority vote of the SC.
-\subsubsubsubsection{}
-The Chair of the SC shall be responsible for contacting the Board member removed with a written explanation of the reason for removal and shall place it in the SC minutes.
+\subsection{Membership.}
+The SOFC must have at least ten (10) but no more than twenty (20) voting members.  More than half of the voting members must be Assembly representatives.  The President shall, with the advice and consent of the Assembly and the SOFC Chair, appoint the members of the SOFC.
+
+\subsection{Schedule.}
+Each semester shall consist of at least two funding cycles.  The exact dates of these funding cycles shall be determined by the SOFC Chair.
+
+\subsection{Structure.}
+For each funding cycle, the SOFC shall divide its membership into a Reviews Board and an Appeals Board.  The Reviews Board shall recommend allocations to the Assembly.  Any organization may appeal its recommended allocation to the Appeals Board, which shall hear the organization's oral appeal upon request by the organization.  Each Board must have at least four but no more than nine voting members.  Each Board must maintain a majority of voting Assembly representatives.  No voting member of the Reviews Board may serve as a voting member of the Appeals Board within any particular funding cycle.
 
 \subsection{Voting Rights}
 \subsubsection{}
@@ -150,43 +150,42 @@ Violations by members of MSA shall constitute malfeasance in office and be groun
 Prior to a vote related to the finances of an organization, members of either Board are required to declare any financial or personal interest they have with that organization.
 \subsubsection{Chair Voting}
 \subsubsubsection{}
-The Chair shall vote to break a tie.
+The Chair may vote to break a tie.
 \subsubsubsection{}
 The Chair may not vote in any other circumstances.
 
-\subsection{BPC Procedure}
+\subsection{Procedure.}
 \subsubsection{}
-BPC shall determine and recommend funding allocations to the MSA on a viewpoint neutral basis.
+The SOFC shall determine and recommend funding allocations to the MSA on a viewpoint neutral basis.
 \subsubsection{}
-BPC may not consider the membership, composition, or political views of any organization when deliberating funding recommendations.
+The SOFC may not consider the membership, composition, or political views of any organization when deliberating funding recommendations.
 \subsubsection{}
-Funding applications to BPC shall be made available to student organizations within two weeks of the start of each semester and shall remain available until the application deadline for the final cycle of that semester.
+Funding applications to the SOFC shall be made available to student organizations within two weeks of the start of each semester and shall remain available until the application deadline for the final cycle of that semester.
 \subsubsection{}
-BPC shall consider no more than one application per organization per cycle.
+The SOFC shall consider no more than one application per organization per cycle.
 \subsubsection{}
-Upon the request of an officer of a student organization, the BPC Chair, or designee, shall provide a written justification for that organization's recommended allocation.
+Upon the request of an officer of a student organization, the SOFC Chair, or designee, shall provide a written justification for that organization's recommended allocation.
 \subsubsection{}
-Upon the request of any member of MSA, the BPC Chair, or designee, shall provide a written justification for the recommended allocation of any organization.
+Upon the request of any member of MSA, the SOFC Chair, or designee, shall provide a written justification for the recommended allocation of any organization.
 \subsubsection{}
-Any money allocated to a student organization by the Assembly upon recommendation from BPC which is unspent by the organization shall be considered canceled by the organization and shall revert to MSA.
+Any money allocated to a student organization by the Assembly upon recommendation from the SOFC which is unspent by the organization shall be considered canceled by the organization and shall revert to MSA.
 \subsubsection{}
-The BPC Chair, with the assistance of the Administrative Coordinator, will oversee the disbursement and reimbursement process of student organizations from BPC earmarked funds.
+The SOFC Chair, with the assistance of the Administrative Coordinator, will oversee the disbursement and reimbursement process of student organizations from BPC earmarked funds.
 
 \subsection{Student Organization Requirements}
 \subsubsection{}
 All student groups applying for funding must be registered with MSA and have a valid SOAS account.
 \subsubsection{}
-Student organizations must present accurate information to BPC through written applications and any oral statements.
-\subsubsection{}
-BPC conditions
+Student organizations must present accurate information to the SOFC through written applications and any oral statements.
+\subsubsection{Conditions.}
 \subsubsubsection{}
-BPC may attach any conditions to their allocations regarding the use of funds.
+The SOFC may attach any conditions to their allocations regarding the use of funds.
 \subsubsubsection{}
 Organizations receiving funding must stipulate in a grant agreement that they will adhere to these conditions.
 \subsubsubsection{}
-Failure to adhere to the conditions attached to the agreement by BPC shall result in a cancellation of the agreement, and all allocated funds shall revert to MSA.
+Failure to adhere to the conditions attached to the agreement by the SOFC shall result in a cancellation of the agreement, and all allocated funds shall revert to MSA.
 \subsubsubsection{}
-BPC shall not fund, unless deemed necessary by a two-thirds majority vote of the committee:
+The SOFC shall not fund, unless deemed necessary by a two-thirds majority vote of the committee:
 \subsubsubsubsection{}
 Capital goods
 \subsubsubsubsection{}
@@ -200,19 +199,12 @@ Gas
 \subsubsubsubsection{}
 Club sports fees assessed by the Athletic Department
 \subsubsubsection{}
-Organizations receiving funding from BPC must agree to either include the phrase ``Sponsored by the Michigan Student Assembly'' or place the MSA logo on a publication that is distributed for the event.
+Organizations receiving funding the SOFC must agree to either include the phrase ``Sponsored by the Michigan Student Assembly'' or place the MSA logo on a publication that is distributed for the event.
  
-\subsection{BPC Funding Outline}
-\subsubsection{}
-Each semester shall consist of at least two funding cycles.
-\subsubsection{}
-The Review Board shall recommend allocations to the Assembly,
-\subsubsection{}
-Any organization may appeal its recommended allocation to the Appeals Board, which shall hear the organization's oral appeal upon request by the organization.
 
 \subsection{Funding Ineligibility}
 \subsubsection{}
-BPC shall not fund an organization which is a MSA Committee, Commission, or Select Committee with funds earmarked for BPC. 
+The SOFC shall not fund an organization which is a MSA Committee, Commission, or Select Committee with funds earmarked for SOFC. 
 \subsubsection{}
 An organization may be deemed ineligible for funding by a two-thirds vote of the MSA.
 
@@ -220,12 +212,12 @@ An organization may be deemed ineligible for funding by a two-thirds vote of the
 \subsubsection{}
 Late applications shall be considered only under extenuating circumstances.
 \subsubsection{}
-For the BPC Chair to consider a late application, a written statement attached to the funding application must be submitted to the MSA office within three work days of the original application deadline.
+For the SOFC Chair to consider a late application, a written statement attached to the funding application must be submitted to the MSA office within three work days of the original application deadline.
 
 \subsection{Violations}
 \subsubsection{Student Organization}
 \subsubsubsection{}
-Any student organization presenting misleading information regarding activities, finances, membership, or any other required information will not have its application considered by BPC and may, upon a majority vote of the MSA, have its student organization status revoked. 
+Any student organization presenting misleading information regarding activities, finances, membership, or any other required information will not have its application considered by the SOFC and may, upon a majority vote of the MSA, have its student organization status revoked. 
 
 \subsection{Funding Considerations}
 \subsubsection{}
@@ -244,15 +236,3 @@ Completeness of the funding application
 Unique nature of the event
 \subsubsubsection{}
 Prior utilization of MSA funding allocations
-
-\begin{framed}
-\textbf{Notes on new student organization funding process}
-\begin{enumerate}
-\item SOFC
-\item Chair
-\item Vice Chair
-\item Pool of funding people
-\item Self-organize each cycle 
-\item Disjoint reviews and appeals board each cycle
-\end{enumerate}
-\end{framed}
