Changed size of SOFC Reviews and Appeals Boards

--- a/code.tex
+++ b/code.tex
@@ -20,8 +20,8 @@
 
 \rhead{\thepage}
 \chead{\qquad\qquad Article \Roman{article}}
-\lhead{MSA Compiled Code}
-\rfoot{}
+\lhead{MSA Compiled Code (draft)}
+\rfoot{Last revised: \VCDateISO\ (Revision ID: {\tt \GITAbrHash})}
 \cfoot{}
 \lfoot{}
 
@@ -29,9 +29,10 @@
 	\renewcommand{\thepage}{\roman{page}}
 	\title{Michigan Student Assembly Compiled Code (draft) \\
 			\large \includegraphics[width=5in]{2008_msa_color_logo} \\
-			Revision  \\
-			{\tt commit \GITAbrHash} \\
-			Adopted: }
+			Last revised: \VCDateISO \\
+			Revision ID: {\tt \GITAbrHash} \\
+			%Adopted:
+			}
 	\author{\line(1,0){175} \\
 			Elson Y.~Liu \\
 			Rules \& Elections Committee Chair
