--- a/finance.tex
+++ b/finance.tex
@@ -18,10 +18,10 @@ The MSA General Reserve account shall be used for emergency funding if necessary
 The MSA Operations Account shall be used for funding the management of the MSA offices, but shall not be used to pay full-time or part-time staff.  The amount budgeted to the Operations Account from the General Account by the annual budget shall no more than 4\% of projected incoming revenue from student fees.
 
 \subsubsection{Payroll.}
-The MSA Payroll Account shall be used to pay MSA’s full-time and part-time staff.  The amount budgeted to the Payroll Account from the General Account by the annual budget may not exceed 20\% of projected incoming revenue from student fees.
+The MSA Payroll Account shall be used to pay MSA's full-time and part-time staff.  The amount budgeted to the Payroll Account from the General Account by the annual budget may not exceed 20\% of projected incoming revenue from student fees.
 
 \subsubsection{Childcare.}
-\$1.00 per student per semester shall be collected by Student Financial Operations and transferred to a University Financial Aid account for the maintenance of childcare for students.  This money shall not pass into or through any of MSA’s accounts.
+\$1.00 per student per semester shall be collected by Student Financial Operations and transferred to a University Financial Aid account for the maintenance of childcare for students.  This money shall not pass into or through any of MSA's accounts.
 
 \subsubsection{Committee and Commission Accounts.}
 Each MSA committee, commission, and select committee shall have its own account.  Unless otherwise instructed herein, the Treasurer shall determine the amount to be budgeted to each of these accounts in the annual budget.
@@ -42,7 +42,7 @@ The Treasurer shall prepare the annual budget in consultation with the executive
 The annual budget may be amended by the Assembly by a motion, second, and majority vote.
 
 \subsection{}
-The Treasurer must hold an open meeting on each term’s proposed budget at least seven (7) days before the vote on the budget is set to be voted upon.
+The Treasurer must hold an open meeting on each term's proposed budget at least seven (7) days before the vote on the budget is set to be voted upon.
 
 
 \section{Disbursements.}
