--- a/organizations.tex
+++ b/organizations.tex
@@ -137,7 +137,7 @@ The SOFC must have at least ten (10) but no more than twenty (20) voting members
 Each semester shall consist of at least two funding cycles.  The exact dates of these funding cycles shall be determined by the SOFC Chair.
 
 \subsection{Structure.}
-For each funding cycle, the SOFC shall divide its membership into a Reviews Board and an Appeals Board.  The Reviews Board shall recommend allocations to the Assembly.  Any organization may appeal its recommended allocation to the Appeals Board, which shall hear the organization's oral appeal upon request by the organization.  Each Board must have at least four but no more than nine voting members.  Each Board must maintain a majority of voting Assembly representatives.  No voting member of the Reviews Board may serve as a voting member of the Appeals Board within any particular funding cycle.
+For each funding cycle, the SOFC shall divide its membership into a Reviews Board and an Appeals Board.  The Reviews Board shall recommend allocations to the Assembly.  Any organization may appeal its recommended allocation to the Appeals Board, which shall hear the organization's oral appeal upon request by the organization.  Each Board must have at least five (5) but no more than ten (10) voting members.  Each Board must maintain a majority of voting Assembly representatives.  No voting member of the Reviews Board may serve as a voting member of the Appeals Board within any particular funding cycle.
 
 \subsection{Voting Rights}
 \subsubsection{}
@@ -170,7 +170,7 @@ Upon the request of any member of MSA, the SOFC Chair, or designee, shall provid
 \subsubsection{}
 Any money allocated to a student organization by the Assembly upon recommendation from the SOFC which is unspent by the organization shall be considered canceled by the organization and shall revert to MSA.
 \subsubsection{}
-The SOFC Chair, with the assistance of the Administrative Coordinator, will oversee the disbursement and reimbursement process of student organizations from BPC earmarked funds.
+The SOFC Chair, with the assistance of the Administrative Coordinator, will oversee the disbursement and reimbursement process of student organizations from SOFC earmarked funds.
 
 \subsection{Student Organization Requirements}
 \subsubsection{}
