Introduced commission categories and updated commission mandates

--- a/executive.tex
+++ b/executive.tex
@@ -52,57 +52,57 @@ The Chief of Staff shall oversee attendance and procedural policies at meetings 
 The Chief Programming Officer shall serve as principal advisor to the President on matters of student programming, assist executive commissions in the long-range planning and execution of their mandate, and supervise the communications of the Central Student Government. The Chief Programming Officer may serve as a non-voting \textit{ex-officio} member of any legislative body concerning campus communication.
 
 
-\section{Commissions}
+\section{Commissions.}  The following classification scheme for commissions is for organizational purposes, and is not intended to establish any ranking or hierarchy of commissions or classification of commissions.  All commissions and classifications of commissions are equal under this Code.
 
-\subsection{}
+\subsection{Logistical Commissions.}
+
+\subsubsection{}
 The Student Organization Funding Commission (``SOFC'') shall review applications for funding from student organizations, and shall submit student organization funding recommendations to the Assembly.
 
-
-\subsection{}
+\subsubsection{}
 The Campus Governance Commission (``CGC'') shall assist the President in identifying candidates suitable for nomination to University-wide committees and facilitate communications between MSA and its appointees to University committee.
 
-\subsection{}
+\subsubsection{}
 The External Relations Commission (``ERC'') shall
-\subsubsection{}
+\subsubsubsection{}
 facilitate communication between MSA and individuals and organizations external to the University community;
-\subsubsection{}
+\subsubsubsection{}
 advocate on behalf of MSA and the student body before organizations external to the University community;
-\subsubsection{}
+\subsubsubsection{}
 monitor local, state and national government actions concerning MSA and the University;
-\subsubsection{}
+\subsubsubsection{}
 maintain contact with other college and university student governments and associations of student governments.
-\subsubsection{}
+\subsubsubsection{}
 Elect a liaison who shall attend Ann Arbor city council meetings and report back to the committee with any information he/she may find pertinent.
 
-\subsection{}
+\subsubsection{}
 The Alumni Relations Commission (``ARC'') shall:
-\subsubsection{}
+\subsubsubsection{}
 build and strengthen the relationship between the Assembly and its alumni;
-\subsubsection{}
+\subsubsubsection{}
 hold a formal event celebrating MSA seniors' graduation each spring
-\subsubsection{}
+\subsubsubsection{}
 coordinate with the Communications Committee and the Chief of Staff to send  a semesterly MSA update / newsletter to the alumni.
 
-\subsection{}
+\subsubsection{}
 The Communications Commissions (``Communications'') shall
-\subsubsection{}
+\subsubsubsection{}
 facilitate all communication between MSA and students;
-\subsubsection{}
+\subsubsubsection{}
 publicize MSA actions and activities;
-\subsubsection{}
+\subsubsubsection{}
 advertise MSA services to students;
-\subsubsection{}
+\subsubsubsection{}
 coordinate MSA press releases;
-\subsubsection{}
+\subsubsubsection{}
 be responsible for updating and administering the MSA website;
-\subsubsection{}
+\subsubsubsection{}
 facilitate MSA's presence during New Student Orientation and Welcome Week.
-\subsubsection{}
+\subsubsubsection{}
 carry out its duties in a fair and equitable manner to all constituents while refraining from promoting the Michigan Student Assembly as a body of bias.
 
 
-\subsection{}
-The Gender Issues Commission (``GIC'') shall strive to educate the university community on gender issues and shall monitor and work toward the improvement of student life for students of all genders on campus, including but not limited to lesbian, gay, bisexual and transgender students, and shall facilitate communication between relevant student organizations.
+\subsection{Identity Commissions}
 
 \subsubsection{}
 The Lesbian, Gay, Bisexual \& Transgender Issues Commission (``LGBT'') shall monitor and work toward the improvement of student life for lesbian, gay, bisexual and transgender students, and shall facilitate communication between relevant student organizations.
@@ -110,56 +110,57 @@ The Lesbian, Gay, Bisexual \& Transgender Issues Commission (``LGBT'') shall mon
 \subsubsection{}
 The Women's Issues Commission (``WIC'') shall monitor and work toward the improvement of student life for all women on campus, shall strive to educate the university community on women's issues and shall facilitate communication between relevant student organizations.
 
-\subsection{}
+\subsubsection{}
 The Multicultural Affairs Commission (``MAC'') shall monitor and work toward the improvement of ethnic and cultural diversity in student life, shall strive to educate the university community on issues regarding underrepresented minorities on campus, and shall facilitate communication between relevant student organizations.
 
-
-\subsection{}
+\subsubsection{}
 The International Student Affairs Commission (``ISAC'') shall monitor and work toward the improvement of student life for all international students on campus, and facilitate communication between relevant student organizations.
 
-\subsection{}
+\subsubsection{}
+The Disability Affairs Commission (``DAC'') shall support and advocate for students with disabilities on campus.
+
+\subsubsection{}
 The North Campus Affairs Commission (``NCAC'') shall monitor and work toward the improvement of student life for all students who live and study on North Campus, and shall facilitate communication between relevant student organizations.
 
 
-\subsection{}
-The Campus Improvement Commission (``CIC'') shall work to promote and maintain a positive campus atmosphere. They shall also work to bring events that will better the campus as a whole. 
+\subsection{Issue Commissions}
 
-\subsection{}
+\subsubsection{}
+The Campus Improvement Commission (``CIC'') shall foster communication between MSA and students by promoting opportunities for students to provide ideas that improve life on campus. Also, it shall create positive change on campus by considering and implementing those initiatives that are most important to students.
+
+\subsubsection{}
 The Academic Affairs Commission (``AAC'') shall 
-\subsubsection{}
+\subsubsubsection{}
 monitor and work toward the improvement of the academic experience of all students;
-\subsubsection{}
+\subsubsubsection{}
 be responsible for the administration of Advice Online.
 
-\subsection{}
-The Campus Safety Commission (``CSC2'') shall promote the safety of all students on campus, educate students on safety issues, and facilitate communication between relevant student organizations.
+\subsubsection{}
+The Campus Safety Commission (``CSC'') shall promote the safety of all students on campus, educate students on safety issues, and facilitate communication between relevant student organizations.
 
-\subsection{}
+\subsubsection{}
 The Environmental Issues Commission (``EIC'') shall
-\subsubsection{}
+\subsubsubsection{}
 promote a sustainable University community;
-\subsubsection{}
+\subsubsubsection{}
 promote environmental awareness on campus;
-\subsubsection{}
+\subsubsubsection{}
 facilitate communication between relevant student organizations.
 
-\subsection{}
+\subsubsection{}
 The Health Issues Commission (``HIC'') shall promote the health of all students on campus, educate students on health issues, and facilitate communication between relevant student organizations.
 
-\subsection{}
+\subsubsection{}
 The Peace \& Justice Commission (``P\&J'') shall promote a peaceful and equitable University community in a fair and equitable manner to all constituents while refraining from promoting the Michigan Student Assembly as a body of bias.
 
-\subsection{}
+\subsubsection{}
 The Students Rights Commission (``SRC'') shall 
-\subsubsection{}
+\subsubsubsection{}
 work toward the protection and education of the rights of students;
-\subsubsection{}
+\subsubsubsection{}
 shall serve on the search committee for and act as a voting member of the Code of Conduct Advisory Board (C-CAB).
-\subsubsection{}
+\subsubsubsection{}
 assist C-CAB in advocating for the adoption of the recommended changes to the Statement of Students Rights and Responsibilities before the University administration.
 
-\subsection{}
+\subsubsection{}
 The Voice Your Vote Commission (``VYV'') shall, without engaging in partisan political activity, promote political awareness and participation among the University community.
-
-
-\section{AirBus}
